# aws-genai-rag-workshop-2025

./: .env.example  .envrc  .gitignore  .gitmodules  CLAUDE.org  CONTRIBUTING.org  DEPENDENCIES.org  Makefile  README.md  README.org  SECURITY.org  WEEKEND_TESTING_CHECKLIST.org  WIP.org  docker-compose.yml  init-repo.sh  make-support.el  mise-en-place.org  presentation.org  pyproject.toml  test_compatibility.py
.claude/: settings.local.json
.claude/commands/: mise-en-place.md  review.md
.devcontainer/: devcontainer.json
.github/workflows/: rag-validation.yml
docs/: AWS_SETUP_MACOS.md  AWS_SETUP_MACOS.org  LEVEL5_TERRAFORM.org  MULTI_OS_TESTING_TRACKER.org  OS_COMPATIBILITY.md  OS_COMPATIBILITY.org  TESTING_GUIDE.md  TESTING_GUIDE.org  presentation-punchlist.org  presentation-review-personas.org  workshop-requirements.org
docs/status/: 2025-05-26-session.org  2025-05-27-session.org  2025-05-28-session.org  2025-05-29-session.org  README.org  dependencies-validation.org  stability-check.txt
infra/: README.org
infra/scripts/: deploy.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform-localstack/: lambda_function.py  main.tf  test-infrastructure.sh  variables.tf
infra/terraform/environments/dev/: terraform.tfvars
infra/terraform/environments/prod/: terraform.tfvars
infra/terraform/environments/staging/: terraform.tfvars
infra/terraform/modules/anthropic/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/bedrock/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rag/: main.tf  outputs.tf  variables.tf
live/: 20250529.org  SETUP.org  debug.org
localstack/: init-aws.sh
localstack/sample-data/: 01-schema.sql  02-sample-data.sql
notebooks/: 01_debug.org  01_rag_basics.org  01_rag_basics_aws.org  01_rag_basics_original.org  01_rag_basics_simplified.org  02_advanced_rag.org  03_text_to_sql.org  04_fine_tuning.org  05_cost_analysis.org
prompts/: README.org  header-image.txt  notebook-review.txt  python-code-review.txt  workshop-completeness-check.txt
scripts/: check-env.py  clean-cache.sh  fix-aws-credentials.sh  setup.sh  validate-workshop.sh  validate_rag_level1.py
src/agents/: reranking.py  sql_agent.py  text_to_sql_demo.py
src/demos/: __init__.py  philosophical_rag.py
src/examples/: hello_world.py
src/rag/: aws_setup.py  chunking.py  cost_analyzer.py  data_preparation.py  embeddings.py  knowledge_base.py  opensearch_manager.py  pipeline.py  vector_store.py
src/utils/: aws_client.py  cost_calculator.py  pdf_extractor.py
tests/: test_examples.py  test_text_to_sql.py
