[project]
name = "aws-genai-rag-workshop"
version = "0.1.0"
description = "Building Production-Ready Advanced Gen AI Applications Workshop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "langchain>=0.2.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.2.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "awscli>=1.32.0",
    "awscli-local>=0.22.0",
    "localstack>=3.5.0",
    "psycopg2-binary>=2.9.0",
    "rank-bm25>=0.2.2",
    "rouge>=1.0.1",
    "spacy>=3.7.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
]
sagemaker = [
    "sagemaker>=2.220.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.files-to-prompt]
include = [
    "src/**/*.py",
    "notebooks/*.org",
    "Makefile",
    "pyproject.toml",
    "README.org"
]
exclude = [
    "**/__pycache__/**",
    "**/node_modules/**",
    "data/**"
]
